fix the overflow

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -174,6 +174,7 @@
 .footer__socials {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   gap: 11px;
 
   margin: 0;
