--- a/source/sass/blocks/subscriptions.scss
+++ b/source/sass/blocks/subscriptions.scss
@@ -90,6 +90,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 
   list-style: none;
   margin: 0;
@@ -202,8 +203,9 @@
 }
 
 .subscriptions__items {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, 360px);
+  gap: 40px;
 
   animation: show-items 1s;
 
@@ -216,7 +218,14 @@
   }
 
   @include vp-1200 {
+    grid-template-columns: 1fr;
+    gap: 31px;
+
     flex-direction: column;
+  }
+
+  @include vp-768 {
+    gap: 38px;
   }
 }
 
@@ -278,7 +287,6 @@
     padding-top: 59px;
 
     margin: 0 auto;
-    margin-bottom: 31px;
 
     &:last-child {
       margin-bottom: 0;
@@ -290,8 +298,6 @@
     max-width: none;
 
     padding: 42px 32px;
-
-    margin-bottom: 38px;
   }
 }
 
